[package]
name = "const_stringify_ints"
version = "0.1.0"
authors = ["Shelvacu <rustacean@shelvacu.com>"]
edition = "2021"
description = "Converts (generic) constant integers to &'static str"
repository = "https://github.com/shelvacu/const_stringify_ints/"
license = "MIT OR Apache-2.0"
keywords = ["utility", "const", "constants", "rust"]
categories = ["no-std", "rust-patterns"]
exclude = [".github"]
publish = true

[dependencies]